--- a/front/src/components/login/nickname.css
+++ b/front/src/components/login/nickname.css
@@ -1,53 +1,49 @@
-.namePage {
-  align-items: center;
-  background-color: white;
+.namepage {
   display: flex;
   flex-direction: column;
-  position: relative; 
+  margin-left: auto;
+  margin-right: auto;
 
 }
 
 .view {
-  align-items: flex-start;
   display: flex;
   flex-direction: column;
   margin-top: 11.2vh;
-
+  justify-content: center;
 }
-
-.text-1 {
-  font-family: 'Nanum Gothic Coding';
-  font-weight: 400;
-  font-size: 20px;
+.setname {
+  display: flex;
+  flex-direction: column;
   margin-left: 6vw;
   margin-right: 6vw;
+  position: relative;
+  margin: auto;
 }
 
 
-#nickname {
-  font-family: 'Nanum Gothic Coding';
-  align-items: flex-start;
-
+.text-1 {
+  text-align: start;
+  font-size: 1.5em; 
+  margin-bottom: 2.86vh;
 }
-
 
 .nameInput {
   display: flex;
-  align-items: flex-start;
-  margin-top: 2.85vh;
-  margin-left: 6vw;;
-  
+  font-size: 1.25em;
+
 }
 
-.noError {
-  color: black;
-  font-size: large;
-
+#nickname {
+  font-family: 'Nanum Gothic Coding';
 }
 
 .lenError {
   color : red;
-  font-size: large;
+}
+
+.noError {
+  color : black;
 }
 
 .createBtn {
@@ -57,10 +53,11 @@
 #createBtn {
   border: 2px solid #6DCEF5;
   color: #6DCEF5;
-  height: 64px;
-  width: 160px;
-  margin-left: 30vw;
-  margin-right: 30vw;
+  height: 4rem;
+  width: 10rem;
+  margin-left: auto;
+  margin-right: auto;
+  
 }
 
 #createBtn:hover{
