[Feat] 메인페이지완성
메인페이지 >> 내관심페이지 제작중

--- a/front/src/components/home/css/BottonNav.css
+++ b/front/src/components/home/css/BottonNav.css
@@ -14,10 +14,11 @@ nav {
   border-top-right-radius: 10%;
 }
 nav > div {
+  border-radius: 10%;
   text-align: center;
   float: left;
   width: 20%;
-  height: 10.5vh;
+  height: 7vh;
   margin-top: 1.5vh;
   line-height: 10.5vh;
 }
