--- a/front/src/index.css
+++ b/front/src/index.css
@@ -28,6 +28,11 @@ code {
 }
 
 @font-face {
+	font-family: "IbmPlexSansKrLightRegular";
+	src: url(./static/fonts/IBM_Plex_Sans_KR/IBMPlexSansKR-Regular.ttf);
+}
+
+@font-face {
 	font-family: "digi";
 	src: url(./static/fonts/digital/DS-DIGI.TTF);
 }
@@ -35,5 +40,6 @@ code {
   --font-NanumGothicCoding: "NanumGothicCoding";
   --font-IbmPlexSansKrLight: "IbmPlexSansKrLight";
   --font-IbmPlexSansKrLightMedium: "IbmPlexSansKrLightMedium";
+  --font-IbmPlexSansKrLightRegular: "IbmPlexSansKrLightRegular";
   --font-digi: "digi";
 }
