[Feat] 검색창 진행중
최근목록 진행중

Issue S08P012B111-368

--- a/front/src/pages/css/search.css
+++ b/front/src/pages/css/search.css
@@ -1,8 +1,10 @@
-.searchpage {
+.search-page {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    position : relative;
+    padding-bottom: 12.5vh;
+    margin-left: 6vw;
+    margin-right: 6vw;    
+    margin-top : 8.57vh;
 }
 
-.icon {
-    
-}
