[File] 재무제표차트 추가
재무제표 차트 추가 후 css 작업 시작

 Issue : S08P12B111-382

--- a/front/src/pages/css/Charts.css
+++ b/front/src/pages/css/Charts.css
@@ -1,6 +1,16 @@
+.main-container {
+    display: flex;
+    flex-direction: column;
+    position : relative;
+    padding-bottom: 12.5vh;
+    margin-left: 6vw;
+    margin-right: 6vw;    
+    margin-top : 2.5vh;
+}
+
 .space-between {
     display: flex;
-    justify-content:space-between;
+    justify-content: space-between;
 }
  
 .space-margin {
@@ -9,6 +19,12 @@
 
 .divbox {
     background-color: F4F4F4;
+    float : left;
+}
+
+.divbox > * {
+    display: flex;
+    justify-content: flex-start;
 }
 
 .selectDay {
