--- a/front/src/components/community/css/ArticleItem.css
+++ b/front/src/components/community/css/ArticleItem.css
@@ -2,16 +2,21 @@
     display: flex;
     flex-direction: column;
     padding-top: 0.95vh;
-    margin-bottom: 2.85vh;
-    border-top: 1px solid grey;
-    border-bottom: 1px solid grey;
+    margin-bottom: 5.85vh;
+    border-top: 1px solid #6DCEF5;
+    border-bottom: 1px solid #6DCEF5;
 }
 
+
 .userid {
+    display: flex;
+    margin-top: 24px;
     text-align: left;
     padding-bottom: 1.9vh;
     font-size: 1rem;
     margin-left: 4vw;
+    margin-right: 4vw;
+    justify-content: space-between;
 }
 
 .title {
@@ -20,24 +25,45 @@
     margin-top: auto;
     margin-bottom: 1.43vh;
     margin-left: 4vw;
-
+    margin-right: 4vw;
 }
 
+.title > * {
+    font-weight: bold;
+    font-size: larger;
+    
+}
+
+.content {
+    display: flex;
+    margin-top: 24px;
+    text-align: left;
+    padding-bottom: 1.9vh;
+    font-size: 1rem;
+    margin-left: 4vw;
+    margin-right: 4vw;
+    font-size: large;
+}
 
 .icon {
     display: flex;
+    margin-top: 2vh;
+    margin-bottom: 2vh;
 }
 
 .like {
-    text-align: left;
     margin-left: 4vw;
     margin-right: 2vw;
     font-size: xx-large;
 }
 
 .comment {
-    text-align: left;
     margin-left: 4vw;
     margin-right: 2vw;
     font-size: xx-large;
+}
+
+.item-btn {
+    margin-left: auto;
+    margin-right: 4vw;
 }
