--- a/front/src/components/community/css/ArticleItem.css
+++ b/front/src/components/community/css/ArticleItem.css
@@ -7,7 +7,6 @@
     border-bottom: 1px solid #6DCEF5;
 }
 
-
 .userid {
     display: flex;
     margin-top: 24px;
@@ -35,7 +34,7 @@
 }
 
 .content {
-    display: flex;
+    /* display: flex; */
     margin-top: 24px;
     text-align: left;
     padding-bottom: 1.9vh;
@@ -43,6 +42,21 @@
     margin-left: 4vw;
     margin-right: 4vw;
     font-size: large;
+}
+
+.content-open {
+    max-height: 100%;
+    line-height: 30px;
+}
+
+.content-close {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    line-height: 30px;
+ 
 }
 
 .icon {
