--- a/front/src/components/search/css/SearchBar.css
+++ b/front/src/components/search/css/SearchBar.css
@@ -6,6 +6,11 @@
     
 }
 
+.search-title > h3 {
+    text-align: left;
+    margin-left: 8.5vw
+}
+
 #search-bar {
     font-family: var(--font-IbmPlexSansKrLightRegular);
     font-size: larger;
