--- a/front/src/components/more/css/MoreMain.css
+++ b/front/src/components/more/css/MoreMain.css
@@ -1,8 +1,8 @@
 .more-page {
     display: flex;
     flex-direction: column;
-
-    
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .more-logo {
@@ -13,7 +13,6 @@
 
 
 .more-btn {
-    width: 80%;
     margin-left: auto;
     margin-right: auto;
     border-top: 1px solid #C4C4C4;
