--- a/front/src/pages/css/Charts.css
+++ b/front/src/pages/css/Charts.css
@@ -14,16 +14,17 @@
 }
  
 .space-margin {
-    margin: 6vw;
+    margin-top: 1vh;
+    margin-bottom: 1vh;
 }
 
 .divbox {
-    background-color: F4F4F4;
+    background-color: #F4F4F4;
+    padding: 16px;
     float : left;
 }
 
 .divbox > * {
-    display: flex;
     justify-content: flex-start;
 }
 
@@ -34,4 +35,16 @@
 
 .selectDay div {
     margin: auto
+}
+
+.charts-title {
+    display: flex;
+    font-size: 24px;
+    margin-bottom: 8px;
+}
+
+.charts-content {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
 }
