[fix] search.css수정

--- a/front/src/pages/css/Home.css
+++ b/front/src/pages/css/Home.css
@@ -7,3 +7,13 @@
     margin-right: 6vw;    
     margin-top : 2.5vh;
 }
+
+.search-page {
+    display: flex;
+    flex-direction: column;
+    position : relative;
+    padding-bottom: 12.5vh;
+    margin-left: 6vw;
+    margin-right: 6vw;    
+    margin-top : 8.57vh;
+  }
