--- a/front/src/components/chart/css/detail.css
+++ b/front/src/components/chart/css/detail.css
@@ -4,3 +4,21 @@
     align-items: flex-start;
     margin: 0px;
 }
+
+.stock-price {
+    font-family: var(--font-IbmPlexSansKrLightRegular);
+    font-size: 48px;
+}
+
+.stock-chart {
+    width: 100%;
+}
+
+.befor-after {
+    font-size: 16px;
+    display: flex;
+}
+
+.befor-after > span {
+    margin : 0px 15px 0px 0px
+}
