--- a/front/src/pages/css/Charts.css
+++ b/front/src/pages/css/Charts.css
@@ -48,3 +48,39 @@
     flex-direction: column;
     align-items: flex-start;
 }
+
+.detail-header {
+    display: flex;
+    justify-content : space-between;
+    height: 3vh;
+    margin: 10px 0px 20px;
+}
+
+.mirilogo2 {height: 100%;}
+
+.detail-title {
+    height: 40px;
+    margin-bottom: 2px;
+    display: flex;
+    align-items: flex-end;
+    font-family: var(--font-IbmPlexSansKrLightRegular);
+    vertical-align: bottom;
+}
+
+.detail-title > b {
+    font-size: 24px;
+    margin-right: 5px;
+    font-family: var(--font-IbmPlexSansKrLightRegular);
+}
+
+.detail-title > span {
+    font-size: 16px;
+    margin-left: 5px;
+    font-family: var(--font-IbmPlexSansKrLightRegular);
+}
+
+.detail-title > div {
+    font-size: 32px;
+    vertical-align: middle;
+    margin-left: auto;
+}
