--- a/front/src/components/more/css/MoreMain.css
+++ b/front/src/components/more/css/MoreMain.css
@@ -1,8 +1,8 @@
 .more-page {
     display: flex;
     flex-direction: column;
-    /* margin-left: auto;
-    margin-right: auto; */
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .more-logo {
