--- a/front/src/components/more/css/Portfolio.css
+++ b/front/src/components/more/css/Portfolio.css
@@ -23,10 +23,8 @@
 }
 
 .portfolio-charts {
-    /* display: flex; */
-    /* justify-content: center; */
-    /* margin-left: auto; */
-    /* margin-right: auto; */
+    display: flex;
+    justify-content: center;
     position: relative;
 }
 
