--- a/front/src/components/trade/css/trade.css
+++ b/front/src/components/trade/css/trade.css
@@ -1,17 +1,41 @@
-.layout {
-    width: 100%;
-    display: grid;
-    grid-template-rows: repeat(3, 1fr);
-    grid-template-columns: repeat(3, 1fr);
-    gap: 8px;
+.persent-btn {
+  margin-top: 16px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
-.layout > div {   
-    width: auto;
-    height: 64px;
-    vertical-align: middle;
+.keypad-layout {
+  margin: 8px 0px 16px;
+    display: grid;
+    grid-template-rows: repeat(4, 1fr);
+    grid-template-columns: repeat(3, 1fr);
+    gap: 0px 16px;
   }
-
-  .layout > div > b {
+  
+  .keypad-layout > div {   
+    width: 64px;
+    height: 64px;
+    margin: auto;
     font-size: 32px;
   }
+  
+  .keypad-layout > div > div {
+    border-radius: 100px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content : center;
+    align-items: center;
+    font-family: var(--font-IbmPlexSansKrLightRegular);
+  }
+
+  .click-num {
+    border-radius: 100px;
+    background-color: rgba(109, 206, 245, 0.5);
+  }
+
+.trade-btn {
+  font-size: 24px;
+  color : #FFFFFF;
+}
