--- a/front/src/components/community/css/Comment.css
+++ b/front/src/components/community/css/Comment.css
@@ -1,10 +1,11 @@
 .comment-box {
-    border-top: 1px solid #6DCEF5;
+    border-top: 3px solid #6DCEF5;
 }
 
 .comment-item {
     display: flex;
-    margin-left: 24px;
+    flex-direction: column;
+    margin-left: 16px;
     margin-top: 16px;
     margin-bottom: 16px;
 
@@ -12,26 +13,27 @@
 }
 
 .item-id {
-    text-align: center;
-    margin-right: 24px;
-    min-width: 80px;
-    margin-top: auto;
-    margin-bottom: auto;
+    text-align: left;
+    display: flex;
+    margin-right: 16px;
     font-weight: bold;
+    justify-content: space-between;
 
 }
 
 .item-content {
     display: flex;
     text-align: left;
+    margin-left: 24px;
+    margin-top: auto;
     margin-right: 24px;
 
 
 }
 
 .comment-open {
-    /* max-height: 100%; */
-    /* line-height: 20px; */
+    max-height: 100%;
+    line-height: 30px;
 }
 
 .comment-close {
@@ -40,15 +42,15 @@
     display: -webkit-box;
     -webkit-line-clamp: 1;
     -webkit-box-orient: vertical;
-    /* line-height: 20px; */
+    line-height: 30px;
  
 }
 
 .create-comment {
-    /* text-align: right; */
     display: flex;
     margin-top: 8px;
     justify-content: center;
+    border-bottom: 1px dashed #C4C4C4;
 }
 
 .comment-createbtn {
