이벤트 오류

--- a/front/src/pages/css/BuySell.css
+++ b/front/src/pages/css/BuySell.css
@@ -13,9 +13,9 @@
 }
 
 
-.trade-keypad {
+/* .trade-keypad {
     width: 88vw;
     margin-top: auto;
     position: fixed;
     bottom: 0;
-}
+} */
