--- a/front/src/components/trade/css/trade.css
+++ b/front/src/components/trade/css/trade.css
@@ -9,8 +9,22 @@
   margin: 0px 0px 15px;
 }
 
+.disabled-body {
+  display: flex;
+  flex-direction: column;
+  border-bottom: solid 1px #8B8B8B;
+  margin: 0px 0px 15px;
+}
+
 .hope-title {
   color : #6DCEF5;
+  text-align: left;
+  margin: 4px 0px 0px;
+  font-family: var(--font-IbmPlexSansKrLightMedium);
+}
+
+.disabled-title {
+  color : #8B8B8B;
   text-align: left;
   margin: 4px 0px 0px;
   font-family: var(--font-IbmPlexSansKrLightMedium);
