--- a/front/src/components/search/css/History.css
+++ b/front/src/components/search/css/History.css
@@ -19,3 +19,8 @@
 .watch-item > * {
     font-family: var(--font-IbmPlexSansKrLightRegular);
 }
+
+#cancel-img {
+    width: 40px;
+    background-color: white;
+}
