[Feat] More, community
더보기 버튼추가, 결과창 counteranimation, QnA css 수정, 검색창 버튼수정중

--- a/front/src/components/search/css/History.css
+++ b/front/src/components/search/css/History.css
@@ -20,7 +20,8 @@
     font-family: var(--font-IbmPlexSansKrLightRegular);
 }
 
-#cancel-img {
-    width: 40px;
+#cancel-btn {
     background-color: white;
+    border: 0;
+    color: #C4C4C4;
 }
