--- a/front/src/components/search/css/History.css
+++ b/front/src/components/search/css/History.css
@@ -20,7 +20,8 @@
     font-family: var(--font-IbmPlexSansKrLightRegular);
 }
 
-#cancel-btn {
+#deletesearch-btn {
+    font-size: 16px;
     background-color: white;
     border: 0;
     color: #C4C4C4;
