--- a/front/src/components/more/css/MoreMain.css
+++ b/front/src/components/more/css/MoreMain.css
@@ -15,6 +15,7 @@
     margin-left: auto;
     margin-right: auto;
     border-top: 1px solid #C4C4C4;
+    width: 80%;
 }
 
 .more-des p {
@@ -30,5 +31,6 @@
     border-color: #6DCEF5;
     justify-content: space-evenly;
     font-weight: bold;
+    width: 90%;
 }
 
