--- a/front/src/components/more/css/Portfolio.css
+++ b/front/src/components/more/css/Portfolio.css
@@ -108,10 +108,12 @@
 }
 
 #restart {
-    border: 2px solid #6DCEF5;
-    color: #6DCEF5;
+    color: white;
+    font-size: 24px;
+    font-family:  var(--font-NanumGothicCoding);
+    font-weight: bold;
     height: 4rem;
-    width: 40vw;
+    width: 100%;
     margin-left: auto;
     margin-right: auto;
     
