--- a/front/src/components/community/css/ArticleItem.css
+++ b/front/src/components/community/css/ArticleItem.css
@@ -2,31 +2,35 @@
     display: flex;
     flex-direction: column;
     padding-top: 0.95vh;
-    margin-bottom: 2.86vh;
+    margin-bottom: 2.00vh;
     border-bottom: 4px solid #6DCEF5 ;
 }
 
 .userid {
     display: flex;
-    padding-bottom: 1.9vh;
+    padding-bottom: 1vh;
     font-size: 24px;
     font-weight: bold;
     margin-left: 4vw;
     margin-right: 4vw;
-    justify-content: space-between;
+    
 }
 
 #item-createAt {
     font-size: 1rem;
     color: #C4C4C4;;
+    margin-left: auto;
 }
 
 .article-title {
-    text-align: left;
+    display: flex;
+    flex-direction: row;
+    ;
     font-size: 1.2rem;
-    margin-bottom: 1.43vh;
+    margin-bottom: 1vh;
     margin-left: 4vw;
     margin-right: 4vw;
+    
     
 }
 
@@ -37,9 +41,9 @@
 }
 
 .article-content {
-    margin-top: 24px;
+    margin-top: 12px;
     text-align: left;
-    padding-bottom: 1.9vh;
+    padding-bottom: 1vh;
     font-size: 1rem;
     margin-left: 4vw;
     margin-right: 4vw;
@@ -65,8 +69,8 @@
 
 .icon {
     display: flex;
-    margin-top: 2vh;
-    margin-bottom: 2vh;
+    margin-top: 1vh;
+    margin-bottom: 1vh;
 }
 
 .comment {
