--- a/front/src/components/Loading.css
+++ b/front/src/components/Loading.css
@@ -1,4 +1,5 @@
 .spinner-4 {
+  
     width: 100px;
     --b: 10px;
     aspect-ratio: 1;
@@ -13,3 +14,11 @@
     animation:s4 1s infinite steps(10);
   }
   @keyframes s4 {to{transform: rotate(1turn)}}
+
+  .Loading {
+    width:100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
