guide 추가,자잘한버그수정

--- a/front/src/components/asset/css/assetstatus.css
+++ b/front/src/components/asset/css/assetstatus.css
@@ -5,7 +5,10 @@
 
 .asset-nickname {
   text-align: start;
-  font-family: var(--font-IbmPlexSansKrLightRegular)
+  font-family: var(--font-IbmPlexSansKrLightRegular);
+  display: flex;
+    justify-content : space-between;
+    align-items: center;
 }
 
 .asset-chart {
