--- a/front/src/components/home/css/AssetStatus.css
+++ b/front/src/components/home/css/AssetStatus.css
@@ -8,7 +8,10 @@
     font-family: var(--font-IbmPlexSansKrLightRegular);
 }
 .asset-status {
-    text-align: start;
+    display: flex;
+    justify-content : space-between;
+    align-items: center;
+    height: 3vh;
 }
 
 .money-unit {
@@ -42,4 +45,11 @@
     text-align: start;
     font-size: 16px;
     font-family: var(--font-IbmPlexSansKrLightRegular);
+}
+
+.swal2-image{
+    margin-top:0px !important;
+    margin-bottom: 0px !important;
+    width:100% !important;
+    height: 80% !important;
 }
