--- a/front/src/pages/css/Charts.css
+++ b/front/src/pages/css/Charts.css
@@ -45,6 +45,8 @@
 .charts-title {
     display: flex;
     font-size: 24px;
+    justify-content : space-between;
+    align-items: center;
     margin-bottom: 8px;
 }
 
