--- a/front/src/components/home/css/AssetStatus.css
+++ b/front/src/components/home/css/AssetStatus.css
@@ -53,3 +53,15 @@
     width:100% !important;
     height: 80% !important;
 }
+
+.swal2-html-container{
+    margin : 0 !important;
+}
+.swal2-container{
+    padding : 0 !important
+}
+
+.swal2-popup {
+    max-width: 70% !important;
+    max-height: 80% !important;
+}
