매우급한 핫픽스

--- a/front/src/components/home/css/AssetStatus.css
+++ b/front/src/components/home/css/AssetStatus.css
@@ -54,7 +54,7 @@
     height: 80% !important;
 }
 
-.swal2-html-container{
+/* .swal2-html-container{
     margin : 0 !important;
 }
 .swal2-container{
@@ -64,4 +64,4 @@
 .swal2-popup {
     max-width: 70% !important;
     max-height: 80% !important;
-}
+} */
